samples/_failures_safe/1761725368_b239a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8336cfbf.c: In function ‘main’:
./samples/SAFE/__tmp_8336cfbf.c:164:36: error: expected ‘;’ at end of input
  164 |         input[strcspn(input, "\n")]
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_8336cfbf.c:164:9: error: expected declaration or statement at end of input
  164 |         input[strcspn(input, "\n")]
      |         ^~~~~
./samples/SAFE/__tmp_8336cfbf.c:164:9: error: expected declaration or statement at end of input
